--- a/assets/less/_partials/typography.less
+++ b/assets/less/_partials/typography.less
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6 {
   color: @heading-color;
   font-family: @headings-font;
   font-weight: 600;
-  line-height: 1;
+  line-height: 1.1;
   margin: (@margin*2) 0 @margin 0;
 
   &:first-child {
@@ -26,8 +26,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 1.75rem;
-  font-weight: 400;
-  line-height: 1.1;
+  letter-spacing: 0.05em;
 }
 
 h2 {
@@ -44,13 +43,10 @@ h4 {
 
 h5 {
   font-size: 1.1rem;
-  font-weight: 800;
 }
 
 h6 {
   font-size: 1rem;
-  font-weight: 900;
-  text-transform: uppercase;
 }
 
 p {
