--- a/assets/less/_partials/util.less
+++ b/assets/less/_partials/util.less
@@ -15,26 +15,26 @@
 @line-height:         			1.75;
 @margin:										@line-height*1rem;
 
-@font-sans:                 'Roboto', sans-serif;
+@font-sans:                 'Din', sans-serif;
 @font-serif:                serif;
 @font-fixed:                monospace;
 
 @body-font:                 @font-sans;
-@headings-font:             @font-sans;
+@headings-font:             'Tungsten', sans-serif;
 
 
 // Branding
-@brand-primary:             #1e1e1e;
-@brand-secondary:           #ffbc2e;
-@brand-accent:              #668db9;
-@brand-gray:                #424242;
+@brand-primary:             #292929;
+@brand-secondary:           #8ba86b;
+@brand-accent:              #8ba86b;
+@brand-gray:                #f2f2f2;
 
 
 
 // Theming
-@body-color:                @blue-grey-50;
-@text-color:                @blue-grey-700;
-@heading-color:             @text-color;
+@body-color:                white;
+@text-color:                #666;
+@heading-color:             @brand-primary;
 
 @link-color:                @brand-secondary;
 @link-hover-color:         	@text-color;
