--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,8 +439,8 @@ th {
 }
 html,
 :root {
-  color: #455a64;
-  font-family: 'Roboto', sans-serif;
+  color: #666666;
+  font-family: 'Din', sans-serif;
   font-size: 100%;
   font-size: 1em;
   line-height: 1.75;
@@ -456,7 +456,7 @@ html,
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
-  background-color: #eceff1;
+  background-color: white;
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (-webkit-min-device-pixel-ratio:144), only screen and (min-resolution:144dppx) {
   html,
@@ -508,7 +508,7 @@ hr {
   margin: 2rem auto;
   border: 0;
   height: 2px;
-  background: #1e1e1e;
+  background: #292929;
 }
 #main-wrap {
   max-width: 100%;
@@ -1329,10 +1329,10 @@ hr {
   position: fixed;
 }
 ::-moz-selection {
-  color: #668db9;
+  color: #8ba86b;
 }
 ::selection {
-  color: #668db9;
+  color: #8ba86b;
 }
 h1,
 h2,
@@ -1340,10 +1340,10 @@ h3,
 h4,
 h5,
 h6 {
-  color: #455a64;
-  font-family: 'Roboto', sans-serif;
+  color: #292929;
+  font-family: 'Tungsten', sans-serif;
   font-weight: 600;
-  line-height: 1;
+  line-height: 1.1;
   margin: 3.5rem 0 1.75rem 0;
 }
 h1:first-child,
@@ -1360,7 +1360,7 @@ h3 a,
 h4 a,
 h5 a,
 h6 a {
-  color: #1e1e1e;
+  color: #292929;
 }
 h1 a:hover,
 h2 a:hover,
@@ -1368,12 +1368,11 @@ h3 a:hover,
 h4 a:hover,
 h5 a:hover,
 h6 a:hover {
-  color: #ffbc2e;
+  color: #8ba86b;
 }
 h1 {
   font-size: 1.75rem;
-  font-weight: 400;
-  line-height: 1.1;
+  letter-spacing: 0.05em;
 }
 h2 {
   font-size: 1.5rem;
@@ -1386,12 +1385,9 @@ h4 {
 }
 h5 {
   font-size: 1.1rem;
-  font-weight: 800;
 }
 h6 {
   font-size: 1rem;
-  font-weight: 900;
-  text-transform: uppercase;
 }
 p {
   margin: 1.75rem 0;
@@ -1404,11 +1400,11 @@ p:last-child {
   margin-bottom: 0;
 }
 a {
-  color: #ffbc2e;
+  color: #8ba86b;
   text-decoration: none;
 }
 a:hover {
-  color: #455a64;
+  color: #666666;
 }
 a:focus {
   outline: 0;
@@ -1485,7 +1481,7 @@ abbr {
   cursor: help;
 }
 blockquote {
-  color: #1e1e1e;
+  color: #292929;
   position: relative;
   margin: 1.75rem 0 1.75rem 0;
   padding: 0 20px 2px;
@@ -1568,13 +1564,13 @@ address {
           transition: all 0.25s ease-out;
 }
 .site-branding .site-title a {
-  color: #1e1e1e;
+  color: #292929;
   display: block;
   -webkit-transition: all 0.25s ease-out;
           transition: all 0.25s ease-out;
 }
 .site-branding .site-title a:hover {
-  color: #ffbc2e;
+  color: #8ba86b;
 }
 @media (max-width: 959px) {
   .site-branding .site-title a {
@@ -1705,7 +1701,7 @@ address {
 .show-nav .menu-toggle:before {
   width: 28px;
   margin: -1px 0 0 -14px;
-  background: #455a64;
+  background: #666666;
 }
 .show-nav .menu-toggle:hover span,
 .show-nav .menu-toggle:hover:before,
@@ -1794,7 +1790,7 @@ address {
   font-weight: 600;
 }
 .main-navigation ul li a:hover {
-  color: #455a64;
+  color: #666666;
 }
 @media (max-width: 959px) {
   .main-navigation ul li a {
@@ -1818,13 +1814,13 @@ address {
   filter: alpha(opacity=100);
 }
 .has-scrolled .single-post .main-navigation ul li a:hover {
-  color: #455a64;
+  color: #666666;
   opacity: 1;
   filter: alpha(opacity=100);
 }
 .main-navigation ul li[class^="current_page_"] a,
 .main-navigation ul li[class*="current_page_"] a {
-  color: #455a64;
+  color: #666666;
 }
 :not(.has-scrolled) .single-post .main-navigation ul li[class^="current_page_"] a,
 :not(.has-scrolled) .single-post .main-navigation ul li[class*="current_page_"] a {
@@ -1834,7 +1830,7 @@ address {
 }
 .has-scrolled .single-post .main-navigation ul li[class^="current_page_"] a,
 .has-scrolled .single-post .main-navigation ul li[class*="current_page_"] a {
-  color: #455a64;
+  color: #666666;
   opacity: 1;
   filter: alpha(opacity=100);
 }
@@ -1846,7 +1842,7 @@ input[type="submit"] {
   border: 0;
   border-radius: 3px;
   color: #fff;
-  background: #ffbc2e;
+  background: #8ba86b;
   line-height: normal;
   padding: 0.5rem 1rem;
   -webkit-transition: all 0.25s ease-out;
@@ -1856,7 +1852,7 @@ button:hover,
 input[type="button"]:hover,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
-  background: #1e1e1e;
+  background: #292929;
 }
 .btn {
   color: #fff;
@@ -1894,53 +1890,53 @@ input[type="submit"]:hover {
   padding: 12px 16px;
 }
 .btn--trans:hover {
-  color: #1e1e1e !important;
+  color: #292929 !important;
   background: #fff;
   background: #ffffff;
 }
 .btn--default {
-  color: #1e1e1e;
+  color: #292929;
   background: #fff;
   border-color: #fff;
 }
 .btn--primary {
   color: #fff;
-  background: #1e1e1e;
-  border-color: #1e1e1e;
+  background: #292929;
+  border-color: #292929;
 }
 .btn--primary:hover {
-  color: #1e1e1e !important;
+  color: #292929 !important;
   background: #fff;
 }
 .btn--primary.btn--outline {
   background: transparent;
-  color: #1e1e1e !important;
+  color: #292929 !important;
 }
 .btn--primary.btn--outline:hover {
   color: #fff !important;
-  background: #1e1e1e !important;
+  background: #292929 !important;
 }
 .btn--secondary {
   color: #fff !important;
-  background: #ffbc2e;
-  border-color: #ffbc2e;
+  background: #8ba86b;
+  border-color: #8ba86b;
 }
 .btn--secondary:hover {
-  color: #ffbc2e !important;
+  color: #8ba86b !important;
   background: #fff;
 }
 .btn--secondary.btn--outline {
   background: transparent;
-  color: #ffbc2e !important;
+  color: #8ba86b !important;
 }
 .btn--secondary.btn--outline:hover {
   color: #fff !important;
-  background: #ffbc2e !important;
+  background: #8ba86b !important;
 }
 input,
 select,
 textarea {
-  color: #455a64;
+  color: #666666;
   font-weight: normal;
   line-height: normal;
   width: 100%;
@@ -1971,7 +1967,7 @@ textarea {
   -webkit-appearance: none;
 }
 ::input-placeholder {
-  color: #455a64;
+  color: #666666;
   line-height: normal;
   opacity: 0.5;
   -webkit-transition: all 0.25s ease-out;
@@ -1981,7 +1977,7 @@ textarea {
   opacity: 0;
 }
 :-moz-placeholder {
-  color: #455a64;
+  color: #666666;
   line-height: normal;
   opacity: 0.5;
   transition: all 0.25s ease-out;
@@ -1990,7 +1986,7 @@ textarea {
   opacity: 0;
 }
 ::-moz-placeholder {
-  color: #455a64;
+  color: #666666;
   line-height: normal;
   opacity: 0.5;
   transition: all 0.25s ease-out;
@@ -1999,7 +1995,7 @@ textarea {
   opacity: 0;
 }
 :-ms-input-placeholder {
-  color: #455a64;
+  color: #666666;
   line-height: normal;
   opacity: 0.5;
   transition: all 0.25s ease-out;
@@ -2008,7 +2004,7 @@ textarea {
   opacity: 0;
 }
 ::-webkit-input-placeholder {
-  color: #455a64;
+  color: #666666;
   line-height: normal;
   opacity: 0.5;
   -webkit-transition: all 0.25s ease-out;
@@ -2053,16 +2049,16 @@ fieldset {
   margin: 0;
 }
 .input-group > input:focus {
-  border-color: #1e1e1e;
+  border-color: #292929;
 }
 .input-group > input:focus + .input-group-btn .btn {
-  background: #1e1e1e;
-  border-color: #1e1e1e;
+  background: #292929;
+  border-color: #292929;
 }
 .input-group > input:focus + .input-group-btn .btn:hover {
   color: #fff;
-  background: #ffbc2e;
-  border-color: #ffbc2e;
+  background: #8ba86b;
+  border-color: #8ba86b;
 }
 [type="checkbox"]:not(:checked),
 [type="checkbox"]:checked,
@@ -2781,7 +2777,7 @@ cite {
   visibility: hidden;
 }
 .clr--brand {
-  color: #1e1e1e !important;
+  color: #292929 !important;
 }
 .bg--gray {
   background-color: #eee;
