--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -8,6 +8,7 @@
 
 @import "_modules/global";
 @import "_partials/dggrid";
+@import "_partials/common";
 @import "_partials/typography";
 
 @import "_modules/header";
