--- a/assets/less/_modules/forms.less
+++ b/assets/less/_modules/forms.less
@@ -7,7 +7,6 @@ textarea {
   font-weight: normal;
   line-height: normal;
   width: 100%;
-  // max-width: 100%;
   // min-width: 100%;
   // height: auto;
   background: #fff;
@@ -22,6 +21,10 @@ textarea {
   &:focus {
     outline: 0;
   }
+}
+
+input[type="search"] {
+  box-sizing: border-box;
 }
 
 textarea {
