added slick less

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -6,7 +6,7 @@
 @import "_partials/normalize";
 @import "_partials/print";
 
-@import "_modules/global";
+@import "_partials/global";
 @import "_partials/dggrid";
 @import "_partials/common";
 @import "_partials/typography";
@@ -17,6 +17,8 @@
 @import "_modules/forms";
 @import "_modules/wordpress";
 @import "_modules/socialicons";
+
+@import "_plugins/_slick/all";
 
 @import "_pages/home";
 
