--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -3,7 +3,7 @@
 @import "_partials/util";
 @import "_partials/mixins";
 
-@import "_partials/normalize";
+@import "_partials/normalize-4.0";
 @import "_partials/print";
 
 @import "_partials/global";
