expanded media query breakpoints

--- a/assets/less/_partials/media-queries.less
+++ b/assets/less/_partials/media-queries.less
@@ -1,5 +1,25 @@
 // GRID
 
+// ALL POSIBLE BREAKPOINTS AND SCREEN VARIATIONS
+// http://design.google.com/resizer/
+// https://www.google.com/design/spec/layout/responsive-ui.html
+// http://codepen.io/Pc/pen/oxeRvr/
+
+// @handset-sm:             360px;
+// @handset-md:             480px;
+// @handset-lg:             600px;
+
+// @tablet-sm-port:         720px;
+// @tablet-md-port:         840px;
+// @tablet-lg-port:         960px;
+
+// @tablet-sm-land:         1024px;
+// @tablet-lg-land:         1280px;
+
+// @desktop-sm:             1440px;
+// @desktop-md:             1600px;
+// @desktop-lg:             1920px;
+
 @gutter:                    48px;
 
 @width-xxs:                 480px;
