--- a/assets/less/_partials/global.less
+++ b/assets/less/_partials/global.less
@@ -45,16 +45,13 @@ html,
   @media @sm {
     font-size: (@fontSize * 125%);
     font-size: (@fontSize * 1.25em);
-    line-height: (@line-height * 1.166667);
+    // line-height: (@line-height * 1.166667);
   }
 
 }
 
 body {
   overflow-x: hidden;
-  .header-padding();
-  .global-transition();
-
 }
 
 main {
