--- a/assets/less/fonts.less
+++ b/assets/less/fonts.less
@@ -1,8 +1,12 @@
 @charset "UTF-8";
 
-@import "../fonts/din/din";
+@import "../fonts/circular/circular";
 
 @import "../fonts/tungsten/tungsten";
+
+@import "../fonts/superclarendon/superclarendon";
+
+@import "../fonts/garamond-premier-pro/garamond-premier-pro";
 
 // _dg_icons
 @import "../fonts/_dgicons/_dgicons";
