--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -15,11 +15,15 @@
 @import "_modules/footer";
 @import "_modules/buttons";
 @import "_modules/forms";
+@import "_modules/aspots";
 @import "_modules/wordpress";
+@import "_modules/postcontent";
 @import "_modules/socialicons";
 
 @import "_plugins/_slick/all";
+@import "_plugins/_fluidbox/fluidbox";
 
 @import "_pages/home";
+@import "_pages/article-single";
 
 @import "_partials/helper";
