--- a/assets/less/_modules/wordpress.less
+++ b/assets/less/_modules/wordpress.less
@@ -1,152 +1,7 @@
 // Wordpress content
 
-.single-post {
 
-  main  {
-
-    article {
-      .entry-header:not(.cover),
-      .entry-content,
-      .entry-footer {
-      }
-
-    }
-
-    table {
-      line-height: normal;
-      border-collapse: collapse;
-      border-spacing: 0;
-      margin: @margin 0;
-      width: 100%;
-
-      tbody {
-        border-bottom: 1px solid @border-color;
-
-        td,
-        th {
-          padding: 0.75rem 0;
-          text-align: left;
-
-          + & {
-            padding-left: 0.75rem;
-          }
-
-        }
-
-        th {
-          font-weight: 600;
-          padding-top: 0;
-        }
-
-        td {
-          border-top: 1px solid @border-color;
-        }
-
-      }
-
-    }
-
-  }
-
-  // CLEAN THIS
-  main article .entry-header.cover {
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    position: relative;
-    margin: 0;
-    width: 100%;
-    height: 600px;
-  }
-  main article .entry-header.cover:after {
-    position: absolute;
-    top: 33%;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    content: '';
-    z-index: 1;
-    background: url('data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgi…gd2lkdGg9IjEwMCUiIGhlaWdodD0iMTAwJSIgZmlsbD0idXJsKCNncmFkKSIgLz48L3N2Zz4g');
-    background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(0,0,0,0)),color-stop(100%, rgba(0,0,0,0.7)));
-    background: -moz-linear-gradient(top, rgba(0,0,0,0),rgba(0,0,0,0.7));
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0),rgba(0,0,0,0.7));
-    background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0.7));
-  }
-
-
-  main article .entry-header.cover .container {
-    position: absolute;
-    z-index: 2;
-    bottom: 40px;
-    left: 50%;
-    transform: translate(-50%);
-
-      @media @mobile {
-        padding-right: 18.5%;
-      }
-      @media @lg {
-        padding-right: 46%;
-      }
-  }
-
-  .entry-title{
-
-  }
-
-  .entry-meta,
-  .entry-meta a {
-  }
-
-
-}
-
-.content,
-.hentry {
-  ul,
-  ol {
-    list-style: initial;
-    padding-left: @margin;
-    overflow: hidden;
-    margin-bottom: @margin;
-    li {
-      margin-bottom: (@margin / 2);
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-  ul {
-    list-style: disc;
-  }
-  ol {
-    list-style: decimal;
-  }
-}
-
-.entry-header {
-
-  margin: 0 0 @margin;
-
-  h1 {
-    margin: 0 0 (@margin/3);
-  }
-
-  .entry-meta {
-    font-size: 0.85rem;
-    opacity: 0.7;
-    + figure {
-      margin-top: (@margin*2);
-
-    }
-  }
-
-}
-
-
-
+/*
 .single-post main article .entry-content {
 
   img.alignnone {
@@ -256,9 +111,6 @@
         max-width: 48rem;
       }
 
-      @media @xl {
-        max-width: 60rem;
-      }
 
     }
 
@@ -267,7 +119,7 @@
 
 
 }
-
+*/
 
 
 cite {
