--- a/assets/less/_modules/header.less
+++ b/assets/less/_modules/header.less
@@ -92,10 +92,7 @@
   opacity: 0;
   visibility: hidden;
   .global-transition();
-
-  &:hover {
-    background: transparent;
-  }
+  .mobileHover(white,@brand-secondary);
 
   @media @mobile {
     opacity: 1;
