--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,43 +1,43 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'Circular';
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.eot');
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.eot?#iefix') format('embedded-opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.woff2') format('woff2'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.woff') format('woff'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.ttf') format('truetype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.svg#circular') format('svg');
+  src: url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.eot');
+  src: url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.eot?#iefix') format('embedded-opentype'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.woff2') format('woff2'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.woff') format('woff'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.ttf') format('truetype'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-book-webfont.svg#circular') format('svg');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'Circular';
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.eot');
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.eot?#iefix') format('embedded-opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.woff2') format('woff2'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.woff') format('woff'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.ttf') format('truetype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.svg#circular') format('svg');
+  src: url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.eot');
+  src: url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.eot?#iefix') format('embedded-opentype'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.woff2') format('woff2'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.woff') format('woff'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.ttf') format('truetype'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-medium-webfont.svg#circular') format('svg');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: 'Circular';
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.eot');
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.eot?#iefix') format('embedded-opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.woff2') format('woff2'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.woff') format('woff'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.ttf') format('truetype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.svg#circular') format('svg');
+  src: url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.eot');
+  src: url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.eot?#iefix') format('embedded-opentype'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.woff2') format('woff2'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.woff') format('woff'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.ttf') format('truetype'), url('/wp-content/themes/_dg/assets/fonts/circular/circularstd-bold-webfont.svg#circular') format('svg');
   font-weight: 700;
   font-style: normal;
 }
 @font-face {
   font-family: 'Tungsten';
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.eot');
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.eot?#iefix') format('embedded-opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.woff') format('woff'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.otf') format('opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.svg#tungsten') format('svg');
+  src: url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.eot');
+  src: url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.eot?#iefix') format('embedded-opentype'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.woff') format('woff'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.otf') format('opentype'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Book.svg#tungsten') format('svg');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: 'Tungsten';
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.eot');
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.eot?#iefix') format('embedded-opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.woff') format('woff'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.otf') format('opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.svg#tungsten') format('svg');
+  src: url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.eot');
+  src: url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.eot?#iefix') format('embedded-opentype'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.woff') format('woff'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.otf') format('opentype'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Medium.svg#tungsten') format('svg');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: 'Tungsten';
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.eot');
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.eot?#iefix') format('embedded-opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.woff') format('woff'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.otf') format('opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.svg#tungsten') format('svg');
+  src: url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.eot');
+  src: url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.eot?#iefix') format('embedded-opentype'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.woff') format('woff'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.otf') format('opentype'), url('/wp-content/themes/_dg/assets/fonts/tungsten/Tungsten-Semibold.svg#tungsten') format('svg');
   font-weight: 600;
   font-style: normal;
 }
@@ -61,15 +61,15 @@
 }
 @font-face {
   font-family: '_dgicons';
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.eot?-ukf82u');
-  src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.eot?#iefix-ukf82u') format('embedded-opentype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.ttf?-ukf82u') format('truetype'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.woff?-ukf82u') format('woff'), url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
+  src: url('/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.eot?-ukf82u');
+  src: url('/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.eot?#iefix-ukf82u') format('embedded-opentype'), url('/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.ttf?-ukf82u') format('truetype'), url('/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.woff?-ukf82u') format('woff'), url('/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: '_dgicons';
-    src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
+    src: url('/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
   }
 }
 [class^="_dgicon-"],
