--- a/assets/fonts/_dgicons/_dgicons.less
+++ b/assets/fonts/_dgicons/_dgicons.less
@@ -4,11 +4,11 @@
 
 @font-face {
   font-family: '_dgicons';
-  src:url('@{path-to-theme}/assets/fonts/_dgicons/_dgicons.eot?-ukf82u');
-  src:url('@{path-to-theme}/assets/fonts/_dgicons/_dgicons.eot?#iefix-ukf82u') format('embedded-opentype'),
-    url('@{path-to-theme}/assets/fonts/_dgicons/_dgicons.ttf?-ukf82u') format('truetype'),
-    url('@{path-to-theme}/assets/fonts/_dgicons/_dgicons.woff?-ukf82u') format('woff'),
-    url('@{path-to-theme}/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
+  src:url('/wp-content/themes/@{theme-name}/assets/fonts/_dgicons/_dgicons.eot?-ukf82u');
+  src:url('/wp-content/themes/@{theme-name}/assets/fonts/_dgicons/_dgicons.eot?#iefix-ukf82u') format('embedded-opentype'),
+    url('/wp-content/themes/@{theme-name}/assets/fonts/_dgicons/_dgicons.ttf?-ukf82u') format('truetype'),
+    url('/wp-content/themes/@{theme-name}/assets/fonts/_dgicons/_dgicons.woff?-ukf82u') format('woff'),
+    url('/wp-content/themes/@{theme-name}/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: '_dgicons';
-    src: url('@{path-to-theme}/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
+    src: url('/wp-content/themes/@{theme-name}/assets/fonts/_dgicons/_dgicons.svg?-ukf82u#_dgicons') format('svg');
   }
 }
 
