--- a/assets/fonts/tungsten/tungsten.less
+++ b/assets/fonts/tungsten/tungsten.less
@@ -4,33 +4,33 @@
 
 @font-face {
   font-family: 'Tungsten';
-  src: url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Book.eot');
-  src: url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Book.eot?#iefix') format('embedded-opentype'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Book.woff') format('woff'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Book.otf') format('opentype'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Book.svg#tungsten') format('svg');
+  src: url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Book.eot');
+  src: url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Book.eot?#iefix') format('embedded-opentype'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Book.woff') format('woff'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Book.otf') format('opentype'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Book.svg#tungsten') format('svg');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Tungsten';
-  src: url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Medium.eot');
-  src: url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Medium.eot?#iefix') format('embedded-opentype'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Medium.woff') format('woff'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Medium.otf') format('opentype'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Medium.svg#tungsten') format('svg');
+  src: url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Medium.eot');
+  src: url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Medium.eot?#iefix') format('embedded-opentype'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Medium.woff') format('woff'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Medium.otf') format('opentype'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Medium.svg#tungsten') format('svg');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Tungsten';
-  src: url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Semibold.eot');
-  src: url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Semibold.eot?#iefix') format('embedded-opentype'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Semibold.woff') format('woff'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Semibold.otf') format('opentype'),
-       url('@{path-to-theme}/assets/fonts/tungsten/Tungsten-Semibold.svg#tungsten') format('svg');
+  src: url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Semibold.eot');
+  src: url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Semibold.eot?#iefix') format('embedded-opentype'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Semibold.woff') format('woff'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Semibold.otf') format('opentype'),
+       url('/wp-content/themes/@{theme-name}/assets/fonts/tungsten/Tungsten-Semibold.svg#tungsten') format('svg');
   font-weight: 600;
   font-style: normal;
 }
