--- a/assets/less/_partials/util.less
+++ b/assets/less/_partials/util.less
@@ -1,8 +1,7 @@
 // VARIABLES
 // ============================================
 
-@domain-name:               '//raabcollection.durkancloud.xyz';
-@path-to-theme:             '@{domain-name}/wp-content/themes/_dg';
+@theme-name:                '_dg';
 
 // Color swatches
 @import "material-palette";
