--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&subset=latin%2Clatin-ext";
 @font-face {
   font-family: '_dgicons';
   src: url('//raabcollection.durkancloud.xyz/wp-content/themes/_dg/assets/fonts/_dgicons/_dgicons.eot?-ukf82u');
@@ -150,6 +151,9 @@
 }
 ._dgicon-d-sq:before {
   content: "\e601";
+}
+body {
+  font-family: "Open Sans", sans-serif;
 }
 #wpadminbar #wp-admin-bar-_dg_logo.menupop {
   cursor: pointer;
