--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -3,6 +3,11 @@
 @import "_partials/util";
 @import "../fonts/_dgicons/_dgicons";
 
+@import "//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&subset=latin%2Clatin-ext";
+
+body {
+  font-family: "Open Sans",sans-serif;
+}
 
 #wpadminbar #wp-admin-bar-_dg_logo.menupop {
   cursor: pointer;
