--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: _dg
+Theme Name: _pc
 Author: Paul Carbo
-Author URI: http://www.durkangroup.com
-Description: Durkan base theme.
+Author URI: http://www.practicecreative.com
+Description: Practice base theme.
 Version: 1.0.0
-Text Domain: _dg
+Text Domain: _pc
 */
