--- a/assets/less/fonts.less
+++ b/assets/less/fonts.less
@@ -8,6 +8,6 @@
 
 @import "../fonts/garamond-premier-pro/garamond-premier-pro";
 
-// _dg_icons
-@import "../fonts/_dgicons/_dgicons";
+// _pc_icons
+@import "../fonts/_pcicons/_pcicons";
 
