--- a/assets/less/_partials/mixins.less
+++ b/assets/less/_partials/mixins.less
@@ -112,7 +112,7 @@
     font-size: 24px;
     line-height: 24px;
     content: "\e604";
-    font-family: '_dgicons';
+    font-family: '_pcicons';
     speak: none;
     font-style: normal;
     font-weight: normal;
