--- a/assets/less/_partials/util.less
+++ b/assets/less/_partials/util.less
@@ -1,7 +1,7 @@
 // VARIABLES
 // ============================================
 
-@theme-name:                '_dg';
+@theme-name:                '_pc';
 
 // Color swatches
 @import "material-palette";
