--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @import "_partials/util";
-@import "../fonts/_dgicons/_dgicons";
+@import "../fonts/_pcicons/_pcicons";
 
 @import "//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&subset=latin%2Clatin-ext";
 
@@ -9,14 +9,14 @@ body {
   font-family: "Open Sans",sans-serif;
 }
 
-#wpadminbar #wp-admin-bar-_dg_logo.menupop {
+#wpadminbar #wp-admin-bar-_pc_logo.menupop {
   cursor: pointer;
 }
 
-#wpadminbar #wp-admin-bar-_dg_logo .ab-empty-item {
+#wpadminbar #wp-admin-bar-_pc_logo .ab-empty-item {
   padding-left: 8px;
 }
-#wpadminbar #wp-admin-bar-_dg_logo i {
+#wpadminbar #wp-admin-bar-_pc_logo i {
   font-size: 24px;
   width: 24px;
   height: 24px;
@@ -30,7 +30,7 @@ body {
   display: inline-block;
 }
 
-#wpadminbar #wp-admin-bar-_dg_logo.menupop:hover i {
+#wpadminbar #wp-admin-bar-_pc_logo.menupop:hover i {
   color: #FBBF40;
 }
 
@@ -68,7 +68,7 @@ body {
   padding:0;
   margin: 0;
   display: block;
-  font-family: '_dgicons';
+  font-family: '_pcicons';
   speak: none;
   font-style: normal;
   font-weight: normal;
